apps/app-proxy/overlays/codefreshoct7/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codefreshoct7-cap-app-proxy
  namespace: codefreshoct7
spec:
  ingressClassName: nginx
  rules:
  - host: codefreshoct7.15.207.101.142.nip.io
    http:
      paths:
      - backend:
          service:
            name: cap-app-proxy
            port:
              number: 3017
        path: /app-proxy
        pathType: Prefix
